Fix server crash in forge